--- a/_config.yml
+++ b/_config.yml
@@ -70,11 +70,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: jack-garigliano
+github_username: # jack-garigliano
 gitlab_username: # your GitLab user name
-twitter_username: jackgarig
+twitter_username: # jackgarig
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: jack-garigliano
+linkedin_username: # jack-garigliano
 telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
@@ -102,7 +102,7 @@ unsplash_id: # your unsplash id
 instagram_id: # your instagram id
 facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
-discord_id: jackgarig
+discord_id: # jackgarig
 
 contact_note: >
 
